<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Dark Mode"
            android:textStyle="bold"
            android:textColor="#FF0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:text="@string/thank_you"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/select_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/select_button"
            app:layout_constraintVertical_bias="0.517" />

        <Button
            android:id="@+id/select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pilih"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_dark" />

        <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@mipmap/ic_red_exit"
                android:id="@+id/exit_button"
                android:background="#FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/scaner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>